Infra/k8s/chat-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-mongo
  template:
    metadata:
      labels:
        app: chat-mongo
    spec:
      containers:
        - name: chat-mongo
          image: mongo
          volumeMounts:
            - name: mongodb-pvc-chat
              mountPath: /data/db
          ports:
            - containerPort: 27017
              protocol: TCP
      volumes:
        - name: mongodb-pvc-chat
          persistentVolumeClaim:
            claimName: mongodb-pvc-chat
---
apiVersion: v1
kind: Service
metadata:
  name: chat-mongo-srv
spec:
  selector:
    app: chat-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
