Infra/k8s/memory-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memory-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memories
  template:
    metadata:
      labels:
        app: memories
    spec:
      containers:
        - name: memories
          image: us.gcr.io/forward-emitter-321609/memory-service
---
apiVersion: v1
kind: Service
metadata:
  name: memory-srv
spec:
  selector:
    app: memories
  ports:
    - name: memory
      protocol: TCP
      port: 3000
      targetPort: 3000
