Infra/k8s/users-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  # tell the deployment how to find all the pods it should create
  template:
    metadata:
      labels:
        app: users
    # tell the pod how to behave
    spec:
      containers:
        # name for logging purposes
        - name: users
          image: us.gcr.io/forward-emitter-321609/user-service
---
# type is clusterIP service by default
apiVersion: v1
kind: Service
metadata:
  name: users-srv
spec:
  selector:
    app: users
  ports:
    - name: users
      protocol: TCP
      port: 3000
      targetPort: 3000
