Infra/k8s/users-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-mongo
  template:
    metadata:
      labels:
        app: users-mongo
    spec:
      containers:
        - name: users-mongo
          image: mongo
          volumeMounts:
            - name: mongodb-pvc-users
              mountPath: /data/db
          ports:
            - containerPort: 27017
              protocol: TCP
      volumes:
        - name: mongodb-pvc-users
          persistentVolumeClaim:
            claimName: mongodb-pvc-users
---
apiVersion: v1
kind: Service
metadata:
  name: users-mongo-srv
spec:
  selector:
    app: users-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
